4_sem/thesis/s20_final/logs/3.log
:: loading settings :: url = jar:file:/opt/spark/jars/ivy-2.5.1.jar!/org/apache/ivy/core/settings/ivysettings.xml
Ivy Default Cache set to: /root/.ivy2/cache
The jars for the packages stored in: /root/.ivy2/jars
org.apache.hadoop#hadoop-aws added as a dependency
:: resolving dependencies :: org.apache.spark#spark-submit-parent-ccb786e8-8e95-48ef-a1c7-b0629d8ce311;1.0
	confs: [default]
	found org.apache.hadoop#hadoop-aws;3.3.4 in central
	found com.amazonaws#aws-java-sdk-bundle;1.12.262 in central
	found org.wildfly.openssl#wildfly-openssl;1.0.7.Final in central
:: resolution report :: resolve 106ms :: artifacts dl 4ms
	:: modules in use:
	com.amazonaws#aws-java-sdk-bundle;1.12.262 from central in [default]
	org.apache.hadoop#hadoop-aws;3.3.4 from central in [default]
	org.wildfly.openssl#wildfly-openssl;1.0.7.Final from central in [default]
	---------------------------------------------------------------------
	|                  |            modules            ||   artifacts   |
	|       conf       | number| search|dwnlded|evicted|| number|dwnlded|
	---------------------------------------------------------------------
	|      default     |   3   |   0   |   0   |   0   ||   3   |   0   |
	---------------------------------------------------------------------
:: retrieving :: org.apache.spark#spark-submit-parent-ccb786e8-8e95-48ef-a1c7-b0629d8ce311
	confs: [default]
	0 artifacts copied, 3 already retrieved (0kB/3ms)
24/11/16 03:49:42 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable
  File "/opt/spark-apps/3-predict_domain.py", line 138
    print(f"{df_final.count()}, {len(df_final.columns)}"
         ^
SyntaxError: '(' was never closed
24/11/16 03:49:42 INFO ShutdownHookManager: Shutdown hook called
24/11/16 03:49:42 INFO ShutdownHookManager: Deleting directory /tmp/spark-1c6dc194-e3f2-44af-80ca-785ae730656b
